201212 version (tableblock quite OK but also ALL other table (admonition) too small, needs correction!

--- a/golo.css
+++ b/golo.css
@@ -229,7 +229,7 @@ code { /*mixworx*/ font-family: "Ubuntu Mono", "Consolas", monospace; font-weigh
 
 
 /* Lists */
-ul, ol, dl { font-size: 1em; line-height: 1.5; margin-bottom: 1.25em; list-style-position: outside; font-family: inherit; }
+ul, ol, dl { /*mixworx*/ font-size: 1em; line-height: 1.5; /*mixworx*/ margin-bottom: 1.25em; list-style-position: outside; font-family: inherit; }
 
 ul, ol { margin-left: 1.5em; }
 ul.no-bullet, ol.no-bullet { margin-left: 1.5em; }
@@ -294,12 +294,12 @@ blockquote, blockquote p { line-height: 1.5; color: #999999; }
 
 
 /* Tables */
-table { background: white; margin-bottom: 1.25em; border: solid 1px rgba(145, 135, 84, 0.15); }
-table thead, table tfoot { background: rgba(119, 84, 22, 0.1); font-weight: bold; }
-table thead tr th, table thead tr td, table tfoot tr th, table tfoot tr td { padding: 0.5em 0.625em 0.625em; font-size: inherit; color: rgba(0, 0, 0, 0.8); text-align: left; }
-table tr th, table tr td { padding: 0.5625em 0.625em; font-size: inherit; color: rgba(0, 0, 0, 0.8); }
-table tr.even, table tr.alt, table tr:nth-of-type(even) { background: rgba(119, 84, 22, 0.025); }
-table thead tr th, table tfoot tr th, table tbody tr td, table tr td, table tfoot tr td { display: table-cell; line-height: 1.5; }
+table { /*mixworx*/ background: hsl(30deg 100% 99%); /*mixworx*/ margin-bottom: 1.25em; border: solid 1px /*mixworx*/ hsl(30deg 100% 75%); font-size: 0.75em; /*mixworx*/ }
+table thead, table tfoot { /*mixworx*/ background: hsl(30deg 100% 75%); /*mixworx*/ font-weight: bold; }
+table thead tr th, table thead tr td, table tfoot tr th, table tfoot tr td { padding: 0.25em /*0.625em 0.625em*/; font-size: inherit; color: rgba(0, 0, 0, 0.8); text-align: left; }
+table tr th, table tr td { padding: 0.25em/*0.5625em 0.625em*/; font-size: inherit; color: rgba(0, 0, 0, 0.8); }
+table tr.even, table tr.alt, table tr:nth-of-type(even) { background: hsl(30deg 100% 97%); }
+table thead tr th, table tfoot tr th, table tbody tr td, table tr td, table tfoot tr td { display: table-cell; line-height: 1; /*1.5*/}
 
 
 
@@ -328,9 +328,9 @@ strong strong { font-weight: normal; }
 
 
 
-
+/*mixworx kbd background ivory, btn background lightblue, menuseq background lightgray */
 .keyseq { color: rgba(51, 51, 51, 0.8); }
-kbd { /*mixworx*/ font-family: "Ubuntu Mono", "Consolas", monospace; display: inline-block; color: rgba(0, 0, 0, 0.8); font-size: 0.65em; line-height: 1.45; background-color: #f7f7f7; border: 1px solid #ccc; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 0.1em white inset; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 0.1em white inset; margin: 0 0.15em; padding: 0.2em 0.5em; vertical-align: middle; position: relative; top: -0.1em; white-space: nowrap; /*mixworx*/ }
+kbd { /*mixworx*/ font-family: "Ubuntu Mono", "Consolas", monospace; display: inline-block; color: rgba(0, 0, 0, 0.8); font-size: 0.65em; font-weight: bold; line-height: 1.45; background-color: #f1eeee; /*#f7f7f7*/ border: 1px solid #ccc; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 0.1em white inset; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 0.1em white inset; margin: 0 0.15em; padding: 0.2em 0.5em; vertical-align: middle; position: relative; top: -0.1em; white-space: nowrap; /*mixworx*/ }
 .keyseq kbd:first-child { margin-left: 0; }
 .keyseq kbd:last-child { margin-right: 0; }
 
@@ -531,7 +531,7 @@ pre.pygments .lineno:before { content: ""; margin-right: -0.125em; }
 table.tableblock { max-width: 100%; border-collapse: separate; }
 p.tableblock:last-child { margin-bottom: 0; }
 td.tableblock > .content { margin-bottom: -1.25em; }
-table.tableblock, th.tableblock, td.tableblock { border: 0 solid rgba(145, 135, 84, 0.15); }
+table.tableblock, th.tableblock, td.tableblock { border: 0 solid /*mixworx*/ hsl(30deg 100% 75%)  ; /*mixworx*/}
 
 
 table.grid-all > thead > tr > .tableblock, table.grid-all > tbody > tr > .tableblock { border-width: 0 1px 1px 0; }
@@ -552,12 +552,12 @@ th.valign-top, td.valign-top { vertical-align: top; }
 th.valign-bottom, td.valign-bottom { vertical-align: bottom; }
 th.valign-middle, td.valign-middle { vertical-align: middle; }
 table thead th, table tfoot th { font-weight: bold; }
-tbody tr th { display: table-cell; line-height: 1.5; background: rgba(119, 84, 22, 0.1); }
+tbody tr th { display: table-cell; line-height: 1/*1.5*/; background: hsl(30deg 100% 75%); }
 tbody tr th, tbody tr th p, tfoot tr th, tfoot tr th p { color: rgba(0, 0, 0, 0.8); font-weight: bold; }
 
 
 p.tableblock > code:only-child { background: none; padding: 0; }
-p.tableblock { font-size: 1em; }
+p.tableblock { /*mixworx*/ font-size: 1em; /*mixworx*/}
 
 
 ol { margin-left: 1.75em; }
